#3624 closed bug (fixed)
"Configure Favorites" : cannot add folders
Reported by: | mmadia | Owned by: | leavengood |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
To reproduce : In a BFilePanel, select Favorites --> Configure Favorites, click [Add].
At this point, you should be able to add a folder. However only files are allowed to be added.
Change History (6)
comment:1 by , 16 years ago
Description: | modified (diff) |
---|---|
Owner: | changed from | to
comment:3 by , 15 years ago
Thanks, I suppose I should actually fix bugs I say I will, but I obviously forgot this one. I think you know the Tracker code much better anyhow.
comment:4 by , 15 years ago
Hehe, sorry for stealing the bug though (not in my habits). I just wanted an light one before sleeping! i hope it works, at least :)
comment:5 by , 15 years ago
After 4 months of idleness I don't think it can be called stealing ;)
It seems to be fixed. Is there a reason it defaults to the /boot/apps folder when adding a favorite? At least that is what it did for me in ShowImage.
comment:6 by , 15 years ago
Might be another problem, in fact i never used that feature on BeOS. From what i saw of the code, it does it on purpose (FavoritesConfig.cpp line 854).
I will take a look at this and fix it.