* Favorites in filepanels are always folders, the type of favorites here  doesn't depend on the 'node flavor' of the parent filepanel.  Fixes #3624 * Minor style fix

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32530 a95241bf-73f2-0310-859d-f6bbb57e9c96